For loop added for enemy array

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Robot Gladiators!</title>
   </head>
   <body>
+    <h1>Robot Gladiator</h1>
     <script src="./assets/js/game.js"></script>
   </body>
 </html>
